--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
       
       // show the uploadbtn:
       var btn =document.getElementById('uploadBtn');
-      btn.style.display ='block';
+//      btn.style.display ='block';
       btn.addEventListener("click",uploadPic);
       imageString = imageData;
+      alert(uploadBtn +"has listener now.");
     }
 
     // Called when a photo is successfully retrieved
@@ -131,7 +132,7 @@
         <button onclick="capturePhotoEdit();">Capture Editable Photo</button> <br>
         <button onclick="getPhoto(pictureSource.PHOTOLIBRARY);">From Photo Library</button><br>
         <button onclick="getPhoto(pictureSource.SAVEDPHOTOALBUM);">From Photo Album</button><br><br>
-        <button style="display:none;" id="uploadBtn">Upload Pic</button><br>
+        <button id="uploadBtn">Upload Pic</button><br>
         
         <img style="display:none;width:120px;height:120px;" id="smallImage" src="" />
         <img style="display:none;" id="largeImage" src="" />
