--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     function uploadPic(){
        var options = new FileUploadOptions();
        options.fileKey="file";
-       alert("uploading, name : "+imageString);
+   //    alert("uploading, name : "+imageString);
        options.fileName= "test1";//imageString.substr(imageString.lastIndexOf('/')+1);
 
        options.mimeType="image/jpeg";
