--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
        options.params = params;
        
        var ft = new FileTransfer();
+       alert("uploading");
        ft.upload(imageString, "http://www.springbaystudio.com/tree/upload.php", win, fail, options);
        
     }
