--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <link rel="stylesheet" href="main.css">
     
     <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
-    <script type="text/javascript" charset="utf-8">
+    <script type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript" src="http://10.2.40.12:8080/target/target-script-min.js#anonymous"></script>
 
+    <script>
     var pictureSource;   // picture source
     var destinationType; // sets the format of returned value
     var imageString;     // store the image to be uploaded   
