--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     }
     
     function fail(error){
-        alert("uploading pic fails");
+        alert("uploading pic fails: err "+ error);
     }
     </script>
   </head>
