--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
        params.value1 = "test";
        params.value2 = "param";
 
-       options.params = params;
+       options.params = {};   //params;
        
        var ft = new FileTransfer();
        alert("uploading");
