--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
        options.params = {};   //params;
        
        var ft = new FileTransfer();
-       alert("uploading");
+       alert("FileTransferError.INVALID_URL_ERR: "+FileTransferError.INVALID_URL_ERR);
        ft.upload(imageString, "http://www.springbaystudio.com/tree/upload.php", win, fail, options);
        
     }
