--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
        options.params = {};   //params;
        
        var ft = new FileTransfer();
-       alert("uploading pic"));
+       alert("uploading pic");
        ft.upload(imageString, "http://www.springbaystudio.com/tree/upload.php", win, fail, options, true);       
 
       imageString = imageData;
