--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
     <script type="text/javascript" charset="utf-8"></script>
 <!--    <script type="text/javascript" src="http://10.2.40.12:8080/target/target-script-min.js#anonymous"></script>-->
-    <script type="text/javascript" src="http://192.168.0.108:8080/target/target-script-min.js#anonymous"></script>
+<!--    <script type="text/javascript" src="http://192.168.0.108:8080/target/target-script-min.js#anonymous"></script>-->
     
     <script>
     var pictureSource;   // picture source
