--- a/index.html
+++ b/index.html
@@ -81,10 +81,12 @@
     }
     
     function onBarcodeSuccess(result){
-        alert("We got a barcode\n" +
-              "Result: " + result.text + "\n" +
-              "Format: " + result.format + "\n" +
-              "Cancelled: " + result.cancelled);
+        if( result.cancelled ==false){
+            alert('We got a barcode\n' +
+                  'Result: ' + result.text + '\n' +
+                  'Format: ' + result.format + '\n' +
+                  'Cancelled: ' + result.cancelled);
+         }
     }
     
     function onBarcodeErr(error){
